<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ice_cream_desc">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo_desc">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_desc">Donuts are glazed and sprinkled with candy.</string>
    <string name="textview_intro">Droid Desserts</string>
    <string name="imageview_donut">Donuts are glazed and sprinkled with candy.</string>
    <string name="imageview_froyo">FroYo is premium self-serve frozen yogurt.</string>
    <string name="imageview_icecream">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="no_order">You didnt order anything</string>
    <string name="label_name">Name</string>
    <string name="textview_order">Order</string>
    <string name="edittext_name">Enter your name</string>
    <string name="label_adress">Adress</string>
    <string name="label_phone">Phone</string>
    <string name="hint_adress">Entere your adress</string>
    <string name="hint_phone">Enter your phone</string>
    <string name="textview_note">Note</string>
    <string name="hint_note">Enter your note</string>
    <string name="textview_delivery">Choose a delivery method</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="action_contact">Contact</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_status">Status</string>
    <string name="action_order">Order</string>
    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
</resources>
